--- a/aquel-tehnology.html
+++ b/aquel-tehnology.html
@@ -19,12 +19,12 @@
 
     </script>
 
-    <meta name="description" content="Познакомьтесь с запатентованными технологиями компании производителя фильтров для воды Aquel. Узнайте о европейском качестве фильтрации воды.">
+    <meta name="description" content="Познакомьтесь с запатентованными технологиями компании производителя фильтров для воды AQUEL. Узнайте о европейском качестве фильтрации воды.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Технологии очистки воды Aquel</title>
+    <title>Технологии очистки воды AQUEL</title>
   </head>
 
   <body>
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,7 +65,7 @@
         <div class="introduction introduction--tehnology">
           <div class="container-article animation-fadeIn">
             <h1 class="introduction__title">Инновационные технологии</h1>
-             <span class="introduction__aquel-title">Aquel</span>
+             <span class="introduction__aquel-title">AQUEL</span>
              <div class="introduction__reading-time">Время чтения: 8 минут. <span class="reading-time">Важность - высокая.</span>
             </div>
             <div class="blog-teaser__social-wrapper">
@@ -82,14 +82,14 @@
             <div class="content-navigation">
               <h4 class="content-navigation__title">Оглавление:</h4>
               <ul class="content-navigation__list">
-                <li class="content-navigation__item"><a href="#aquel-advantage">В чем преимущество фильтров Aquel?</a></li>
+                <li class="content-navigation__item"><a href="#aquel-advantage">В чем преимущество фильтров AQUEL?</a></li>
                 <li class="content-navigation__item"><a href="#cleaning-detail">7 этапов очистки воды.</a></li>
                 <li class="content-navigation__item"><a href="#energy-filter">Уникальный фильтр "Энержи".</a></li>
               </ul>
             </div>
 
             <div class="tehnology-review-card">
-              <p class="tehnology-review__content">Современных систем фильтрации воды немало. Одной из тех, что в последнее время стала использоваться особенно активно, является так называемый обратный осмос. Эта технология представлена в водоочистительных системах чешской компании <b>Aquel</b>. Вода проходит грубую очистку (два предварительных фильтра) и глубокую качественную.</p>
+              <p class="tehnology-review__content">Современных систем фильтрации воды немало. Одной из тех, что в последнее время стала использоваться особенно активно, является так называемый обратный осмос. Эта технология представлена в водоочистительных системах чешской компании <b>AQUEL</b>. Вода проходит грубую очистку (два предварительных фильтра) и глубокую качественную.</p>
 
               <blockquote class="block-shadows"><p class="tehnology-review__blockquote">За счет этого получается добиться бактериальной очистки, органической, химической и радиологической.</p></blockquote>
             </div>
@@ -99,7 +99,7 @@
               <div class="divider-main divider-main--card"></div>
 
               <ul class="tehnology-review__list">
-                <li>Сначала вода проходит через обычный фильтр - грубой очистки, в <b>Aquel</b> - это картридж PX-20, который состоит из полипропилена сечением 20 микрон.</li>
+                <li>Сначала вода проходит через обычный фильтр - грубой очистки, в <b>AQUEL</b> - это картридж PX-20, который состоит из полипропилена сечением 20 микрон.</li>
                 <li>Дальше вода поступает во вторую колбу, где находиться картридж PX-5+C, который состоит из 2-х частей - полипропилен сечением 5 микрон и активированный уголь. Задача активированного угля убрать из воды соединения хлора.</li>
                 <li>Третий этап - жидкость очищается <i>обратно-осмотической мембраной</i>. Мембрана убирает вирусы и бактерии, грибки, простейшие, споры, известь, соли тяжелых металлов, органические примеси, такие как, например, фенол и продукты радиологического распада. <i>КПД работы мембраны 85-98%</i>. Мембрана работает как сито. То что не прошло через мембрану (поток грязной воды) проходит через реструктор на выход в канализацию.</li>
               </ul>
@@ -110,21 +110,21 @@
             </div>
 
             <div class="tehnology-review-card">
-              <h3>В чем же преимущество фильтров Aquel:</h3>
+              <h3>В чем же преимущество фильтров AQUEL:</h3>
               <div class="divider-main divider-main--card"></div>
               <p class="tehnology-review__content">В наших фильтрах не просто очищенная вода, которую можно использовать без кипячения (та вода, которая нужна человеку), наша установка ее дорабатывает "до ума", как многие пользователи говорят "волшебная", а врачи говорят "свежеприготовленная".</p>
 
               <p class="tehnology-review__content"><b>Где волшебство? Спросите Вы.</b></p>
 
               <ul class="tehnology-review__list">
-                <li>Четвертая стадия в нашей системе очистки воды - это <b>обогащение минералами</b> Кальцием и Магнием в ионной форме (это патент компании <b>Aquel</b>). Колба наполнена доломитом. Вода, проходя через доломит обогащается минералами (кальцием и магнием) что очень хорошо для человека. Кальций должен поступать в организм не только для формирования костей, но и для того, чтобы предотвращать вымывание кальция у взрослого или пожилого человека из уже сформировавшихся костей. Магний способствует усвоению кальция и калия. Дефицит магния влияет на передачу нервных и мышечных импульсов, вызывая раздражительность и нервозность. Защищает стенки сосудов от перегрузок. Принимает важное участие в формировании костной ткани и в обменных процессах. А еще, таким образом, мы меняем pH воды (на выходе, после фильтра <b>Aquel</b>, мы имеем слабощелочной pH). Воду, со значение по шкале pH выше 7 и отрицательным ОВП (окислительно-восстановительным потенциалом), называют "живой" или активированной. <i>"Живая вода"</i> - это природный биостимулятор, она прекрасно восстанавливает иммунную систему организма, обеспечивая антиоксидантную защиту. Нормализует метаболические процессы и улучшает кровообращение в тканях, нормализует энергетический потенциал клеток. Когда pH  более 7.1 вода приобретает свойство самопроизвольно структурироваться при стоянии.</li>
+                <li>Четвертая стадия в нашей системе очистки воды - это <b>обогащение минералами</b> Кальцием и Магнием в ионной форме (это патент компании <b>AQUEL</b>). Колба наполнена доломитом. Вода, проходя через доломит обогащается минералами (кальцием и магнием) что очень хорошо для человека. Кальций должен поступать в организм не только для формирования костей, но и для того, чтобы предотвращать вымывание кальция у взрослого или пожилого человека из уже сформировавшихся костей. Магний способствует усвоению кальция и калия. Дефицит магния влияет на передачу нервных и мышечных импульсов, вызывая раздражительность и нервозность. Защищает стенки сосудов от перегрузок. Принимает важное участие в формировании костной ткани и в обменных процессах. А еще, таким образом, мы меняем pH воды (на выходе, после фильтра <b>AQUEL</b>, мы имеем слабощелочной pH). Воду, со значение по шкале pH выше 7 и отрицательным ОВП (окислительно-восстановительным потенциалом), называют "живой" или активированной. <i>"Живая вода"</i> - это природный биостимулятор, она прекрасно восстанавливает иммунную систему организма, обеспечивая антиоксидантную защиту. Нормализует метаболические процессы и улучшает кровообращение в тканях, нормализует энергетический потенциал клеток. Когда pH  более 7.1 вода приобретает свойство самопроизвольно структурироваться при стоянии.</li>
                 <li>После минерализации вода поступает в накопительный бак, где она накапливается (8 литров) и хранится.</li>
                 <li>При открытии основного крана вода из накопительного бака проходит через ин-лайн фильтр. Ин-лайн фильтр служит для нейтрализации в воде привкусов и запахов, растворенных в воде.</li>
                 <li>Далее вода поступает в <a href="#energy-filter"><b>*энерджи</b></a> фильтр, где она заряжается энергией. Гранулы находящиеся внутри фильтра своим зарядом заставляют молекулы воды быстро двигаться, что позволяет нашему организму быстро и без особых затрат энергии впитывать такую воду.</li>
                 <li>На выходе из энерджи фильтра вода поступает в колбу ультрафиолетовой лампы, которая служит главным образом барьером для проникновения бактерий и вирусов извне через основной кран. После этого вода, проходя основной кран, выходит из системы.</li>
               </ul>
 
-              <blockquote class="block-shadows"><p class="tehnology-review__blockquote" id="cleaning-detail">Таким образом, фильтрующие системы Aquel состоят из семи ступеней очистки и обогащения воды. Вода не только очищается от всех возможных примесей и микробов, но и обогащается необходимыми минералами, умягчается и "ощелачивается".</p></blockquote>
+              <blockquote class="block-shadows"><p class="tehnology-review__blockquote" id="cleaning-detail">Таким образом, фильтрующие системы AQUEL состоят из семи ступеней очистки и обогащения воды. Вода не только очищается от всех возможных примесей и микробов, но и обогащается необходимыми минералами, умягчается и "ощелачивается".</p></blockquote>
             </div>
 
             <div class="tehnology-review-card">
@@ -134,7 +134,7 @@
                 <li>Вода поступает в первую колбу 10 дюймов, в ней находится картридж PX-20, который состоит из полипропилена сечением 20 микрон, здесь вода проходит грубую очистку (задерживаются крупные фракции), все, что меньше 20 микрон проходит далее.</li>
                 <li>Вода поступает во вторую колбу 10 дюймов, в ней находится картридж PX-5+C, который состоит из двух частей. Нижняя часть - это полипропилен сечением 5 микрон, в верхней части в пластиковом корпусе находится активированный уголь, этот картридж выполняет две функции: задерживает крупные фракции более 5 микрон и нейтрализует в воде соединения хлора.</li>
                 <li>Вода из второй колбы 10 дюймов проходит через <b>*2-х ходовой</b> клапан на вход в колбу осмотической мембраны, где происходит окончательная очистка воды. Диапазон работы осмотической мембраны составляет 85% - 97% очистки от входного показателя. На выходе из мембраны поток очищенной воды через колено с обратным клапаном проходит в третью колбу 10 дюймов. А поток грязной воды проходит через реструктор на выход в канализацию.</li>
-                <li>Четвертая стадия это обогащение воды органическими минералами <i>Кальцием и Магнием</i> в количестве, которое требуется <i>согласно постановлению Чешской Республики</i>. Для минерализации используется особый патрон, разработанный и запатентованный Компанией <b>Aquel</b>. В патроне используется доломит, вода, проходя через доломит с небольшой скоростью, обогащается минералами. На выходе вода попадает в инлайн фильтр.</li>
+                <li>Четвертая стадия это обогащение воды органическими минералами <i>Кальцием и Магнием</i> в количестве, которое требуется <i>согласно постановлению Чешской Республики</i>. Для минерализации используется особый патрон, разработанный и запатентованный Компанией <b>AQUEL</b>. В патроне используется доломит, вода, проходя через доломит с небольшой скоростью, обогащается минералами. На выходе вода попадает в инлайн фильтр.</li>
                 <li>Инлайн фильтр служит для нейтрализации в воде привкусов и запахов, так как осмотическая мембрана не может убрать из воды растворенные в ней кислород и газы.</li>
                 <li>На выходе из инлайн фильтра вода поступает в биокерамический <b>*энерджи</b> фильтр, заставляющий молекулы воды "структурироваться".</li>
                 <li id="energy-filter">Последним этапом вода поступает в колбу с <i>ультрафиолетовой лампой</i>, где под воздействием постоянного УФ-излучения вода стерилизуется. Колба с ультрафиолетовой лампой также служит барьером для проникновения бактерий и вирусов извне через основной кран. УФ-колба всегда ставится на выходе. После этого вода, проходя через основной кран, выходит из системы.</li>
@@ -178,7 +178,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -211,11 +211,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -231,7 +231,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
