--- a/brand-aquel.html
+++ b/brand-aquel.html
@@ -19,12 +19,12 @@
 
     </script>
 
-    <meta name="description" content="История возникновения и развития бренда и компании Aquel, начиная с 2000 года и по сей день.">
+    <meta name="description" content="История возникновения и развития бренда и компании AQUEL, начиная с 2000 года и по сей день.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Бренд Aquel - основание, развитие и достижения.</title>
+    <title>Бренд АКВЕЛ - основание, развитие и достижения.</title>
   </head>
 
   <body>
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -71,7 +71,7 @@
           <div class="container-article">
 
             <div class="brand-aquel__card brand-aquel__card--person">
-              <img src="img/Petr-Benesh-founder.jpg" width="768" height="768" alt="Основатель и руководитель Aquel">
+              <img src="img/Petr-Benesh-founder.jpg" width="768" height="768" alt="Основатель и руководитель AQUEL">
             </div>
 
             <div class="brand-aquel__card brand-aquel__card--intro">
@@ -88,32 +88,82 @@
               <ul class="brand-aquel__list">
                 <li class="brand-aquel__year">2000 год</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
-                <li>Основание Aquel</li>
+                <li>Основание AQUEL</li>
                 <li>Первая презентация оборудования</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
-                <li>Консультация:</li>
-                <li>9:00 - 19:00</li>
-                <li>Время московское</li>
+                <li class="brand-aquel__year">2001 год</li>
+                <li>Основание AQUEL Slovakia</li>
+                <li>Спонсор фонда Дагмар и Вацлава Гавела</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
-                <li>Монтаж и обслуживание:</li>
-                <li>По согласованию</li>
+                <li class="brand-aquel__year">2002 год</li>
+                <li>Основание AQUEL Poland</li>
+                <li>Основание AQUEL Atlas (Марокко)</li>
+                <li>Основание AQUEL Estonia</li>
+                <li>Основание AQUEL Hungary</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li class="brand-aquel__year">2003 год</li>
+                <li>Начало работы в Дубае</li>
+                <li>Главный спонсор Детского Ранчо Глучин</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li class="brand-aquel__year">2004 год</li>
+                <li>Первые служебные машины</li>
+                <li>Спонсор AUTOR Nova Cup</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li class="brand-aquel__year">2005 год</li>
+                <li>Основание AQUEL Germany</li>
+                <li>Запуск автопрограммы AQUEL</li>
+                <li>Первый журнал AQUEL</li>
               </ul>
             </div>
 
             <div class="brand-aquel__card brand-aquel__card--list">
               <ul class="brand-aquel__list">
-                <li class="brand-aquel__year">2000 год</li>
+                <li class="brand-aquel__year">2006 год</li>
+                <li>Основание <b>AQUEL Rus</b></li>
+                <li>Рождение AQUEL Лаборатории</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
-                <li>Интернет-магазин:</li>
-                <li>Круглосуточно</li>
+                <li class="brand-aquel__year">2007 год</li>
+                <li>Начало работы AQUEL Investment</li>
+                <li>Спонсор Лиги против рака</li>
+                <li>Основание AQUEL Bulgaria</li>
+                <li>Сертификация ISO 9001</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
-                <li>Консультация:</li>
-                <li>9:00 - 19:00</li>
-                <li>Время московское</li>
+                <li class="brand-aquel__year">2008 год</li>
+                <li>Основание AQUEL Ukraine</li>
+                <li>Новая автопрограмма AQUEL - Mercedes C</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
-                <li>Монтаж и обслуживание:</li>
-                <li>По согласованию</li>
+                <li class="brand-aquel__year">2010 год</li>
+                <li>Открытие выставки AQUEL</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li class="brand-aquel__year">2011 год</li>
+                <li>Основание AQUEL Казахстан</li>
+                <li>Новый офис AQUEL Poland</li>
+                <li>Запуск AQUEL Credit в Словакии</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li class="brand-aquel__year">2013 год</li>
+                <li>Основание AQUEL Африка</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li class="brand-aquel__year">2015 год</li>
+                <li>Открыто 74 региональных офиса</li>
               </ul>
+            </div>
+
+            <div class="brand-aquel__card brand-aquel__card--achievements">
+              <h2 class="brand-aquel__title">AQUEL в Африке</h2>
+              <p class="brand-aquel__sub-title">Проект очистки сильнозагрязненной воды</p>
+              <div class="divider-main divider-main--card"></div>
+              <img src="img/africa/africa-child.jpg" width="1600" height="150" alt="">
+              <div class="divider-main divider-main--card"></div>
+              <p class="brand-aquel__content">Компания AQUEL Bohemia разработала компактный фильтр-модуль для очистки сильнозагразненной воды в Африке, мощностью от 230 до 800 литров питьевой воды в час. Устройство работает с использованием солнечных панелей и технологии фильтрации, которая не требует внешнего электрического источника.</p>
+              <p class="brand-aquel__content">В ноябре AQUEL Bohemia завершила пилотный проект такого модуля и в конце января 2013 года провела первую установку в одной из деревень, в пятнадцати километрах от г. Бамако, столицы Мали. Общая стоимость пилоного проекта, включая исследования и тестирования, составила более двух миллионов крон, и компания реализовала это за счет собственных средств. Планы компании в течениии блжайших трех лет установить эти модули в сотнях других деревень в Западноафриканской республики.</p>
+              <p class="brand-aquel__sub-title">Завершение пилотного проекта</p>
+              <div class="divider-main divider-main--card"></div>
+              <img class="pull-right" src="img/africa/aquel-solar.jpg" width="600" height="350" alt="Модуль AQUEL Solar для Африки">
+              <p class="brand-aquel__content">Проблема критической нехватки питьевой воды, от чего давно страдают люди в беднейшей Африканской стране, и мы, как производители и дистрибьюторы систем очистки воды, ни в коем случае не могли остаться равнодушными. Уже в 2010 и 2011 годах, мы в различных регионах Африки испытывали портативные системы фильтрации, которые производят безопасную питьевую воду из любых бактериологически загрязненных источников. Таким образом, по приглашению <b>Правительства Мали</b>, разработали компактные системы, которые очищают непригодную для питья воду из собственных скважин и резервуаров. Вода под давлением закачивается через систему фильтрации в специальные контейнеры, погруженные в землю, с выходом для получения питьевой воды. Это будет доступно для любого жителя деревни, где будет установлен такой модуль, и они всегда будут обеспечены чистой питьевой водой.</p>
+              <p class="brand-aquel__sub-title">Как это работает?</p>
+              <div class="divider-main divider-main--card"></div>
+              <p class="brand-aquel__content">Система фильтрации AQUEL черпает воду из колодцев, рек, ручьев или различных скважин и пропускает ее через фильтры, откуда она поступает в огромные накопительные резервуары. Из воды полностью удаляется бактериологическое загрязнение, а эффективность очистки достигает 99,4%. Затем, благодаря нашей минерализации, в воду добавляется кальций и магний. Система погружена в землю на глубину до 1,5 метра и термически изолирована, тем самым, гарантирую, что температура выходной воды составляет около 20 градусов по Цельсию. Эта питьевая вода под давлением подается на специальные краны.</p>
+              <p class="brand-aquel__content clearfix">В планах компании устанавливать такие модули по 30 и более штук ежемесячно для обеспечения чистой питьевой водой более 1000 деревень. Если этот проект окажется успешен, мы будем рекомендовать такой подход к решению проблемы нехватки чистой питьевой воды и в другие страны, нуждающиеся в питьевой воде.</p>
             </div>
 
           </div>
@@ -135,7 +185,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -168,11 +218,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -188,7 +238,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
