--- a/catalog/aquel-1000.html
+++ b/catalog/aquel-1000.html
@@ -34,12 +34,12 @@
             }
         </script>
 
-    <meta name="description" content="Фильтр для воды Aquel 1000 это инновационная система фильтрации воды с последующим обогащением активными минералами. Строгий и современный дизайн. Подходит для дома и офиса. Бесплатная доставка и монтаж в 31 городе России.">
+    <meta name="description" content="Фильтр для воды AQUEL 1000 это инновационная система фильтрации воды с последующим обогащением активными минералами. Строгий и современный дизайн. Подходит для дома и офиса. Бесплатная доставка и монтаж в 31 городе России.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="../css/style.css">
-    <title>Фильтр для воды Aquel 1000</title>
+    <title>Фильтр для воды AQUEL 1000</title>
   </head>
 
   <body>
@@ -58,7 +58,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="../index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="../index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -82,7 +82,7 @@
 
             <div class="single-product__content-block">
               <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">Aquel 1000</h2>
+              <h2 class="single-product__sub-title">AQUEL 1000</h2>
               <p class="single-product__price">49 400 ₽</p>
               <p class="single-product__content">Идеально для дома и офиса</p>
               <p class="single-product__content">Бесплатная доставка, 2-10 дней</p>
@@ -150,7 +150,8 @@
                     document.TinkoffPayForm.payPhone.value)"
                     value="ОПЛАТИТЬ">
                   </form>
-
+                  <img class="well__secure-img" width="90" src="../img/visa-mastercard-logo-small.png" alt="Защищенные платежи">
+                  <span class="well__secure-pay">*Secure Payment</span>
                 </div>
               </div>
             </div>
@@ -169,7 +170,7 @@
             </ul>
 
             <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>Aquel 1000</strong> создан с использованием новейших технологий, гарантирует самое высокое качество очистки питьевой воды. Водоочистительное устройство имеет гарантию 5 лет, может быть установлено на столешницу кухни, в офисе или в любом удобном для Вас месте. Сервисное обслуживание раз в 10 месяцев, для контролирования и поддержания технических показателей. Aquel 1000 произведен в Чехии эксклюзивно по заказу компании Aquel с патентами на фильтрующие элементы и все модификации системы.</p></div>
+              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>AQUEL 1000</strong> создан с использованием новейших технологий, гарантирует самое высокое качество очистки питьевой воды. Водоочистительное устройство имеет гарантию 5 лет, может быть установлено на столешницу кухни, в офисе или в любом удобном для Вас месте. Сервисное обслуживание раз в 10 месяцев, для контролирования и поддержания технических показателей. AQUEL 1000 произведен в США эксклюзивно по заказу компании AQUEL с патентами на фильтрующие элементы и все модификации системы.</p></div>
               <div role="tabpanel" class="tab-pane fade" id="feature">
                 <p>
                   <ul>
@@ -205,7 +206,7 @@
               <div role="tabpanel" class="tab-pane fade" id="delivery">
                 <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
                 </p>
-                <p>Фильтр <strong>Aquel 1000</strong> может быть доставлен и смонтирован в следующих городах:</p>
+                <p>Фильтр <strong>AQUEL 1000</strong> может быть доставлен и смонтирован в следующих городах:</p>
                 <p class="advantages__delivery-content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
               </div>
 
@@ -231,7 +232,7 @@
 
               <div class="card">
                 <a href="aquel-200.html">
-                  <h3 class="card__title">Aquel 200</h3>
+                  <h3 class="card__title">AQUEL 200</h3>
                   <p class="card__content">Лучший выбор для дома</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-200.png" alt="">
@@ -241,7 +242,7 @@
 
               <div class="card">
                 <a href="aquel-zero.html">
-                  <h3 class="card__title">Aquel Zero</h3>
+                  <h3 class="card__title">AQUEL Zero</h3>
                   <p class="card__content">Мобилен и универсален</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-zero-1.png" alt="">
@@ -252,7 +253,7 @@
           </div>
         </div>
 
-        <div class="advice">
+        <div class="advice advice--single-product">
 
           <h2 class="advice__title">Получите консультацию</h2>
           <div class="container-article">
@@ -284,7 +285,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -317,11 +318,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="../brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="../brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="../contract-offer.html">Договор оферта</a></li>
               <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="../acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="../acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -337,7 +338,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
