--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     </script>
 
-    <meta name="description" content="Интернет-магазин по продаже фильтров для воды Aquel в России. Производство США, Чешская Республика, Италия. Запатентованные технологии, бесплатная доставка и монтаж. Официальный дилер.">
+    <meta name="description" content="Интернет-магазин по продаже фильтров для воды AQUEL в России. Производство США, Чешская Республика, Италия. Запатентованные технологии, бесплатная доставка и монтаж. Официальный дилер.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Водоочистительные системы Aquel</title>
+    <title>Водоочистительные системы AQUEL</title>
   </head>
 
   <body>
@@ -46,7 +46,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -74,14 +74,14 @@
 
         <div class="introduction">
           <h2 class="introduction__title fadein-post">Лидер систем водоочистки в Европе</h2>
-          <span class="introduction__aquel-title fadein-post">Aquel</span>
+          <span class="introduction__aquel-title fadein-post">AQUEL</span>
           <div class="button-wrapper">
-            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="aquel-tehnology.html" role="button">ТЕХНОЛОГИИ</a>
+            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="brand-aquel.html" role="button">БРЕНД АКВЕЛ</a>
           </div>
         </div>
 
         <div class="infographics">
-          <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <b>Aquel?</b></h2>
+          <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <b>AQUEL?</b></h2>
 
           <div class="infographics-wrapper-first-block">
 
@@ -100,7 +100,7 @@
 
                   <div class="item active infographics__slider-one">
                     <a href="catalog/aquel-1000.html">
-                      <img src="img/aquel-1000-slider.png" alt="Фильтр для воды Aquel 1000">
+                      <img src="img/aquel-1000-slider.png" alt="Фильтр для воды AQUEL 1000">
                     </a>
                     <div class="carousel-caption">
 
@@ -109,7 +109,7 @@
 
                   <div class="item infographics__slider-two">
                     <a href="catalog/aquel-200.html">
-                      <img src="img/aquel-200+box-slider.png" alt="Фильтр для воды Aquel 200">
+                      <img src="img/aquel-200+box-slider.png" alt="Фильтр для воды AQUEL 200">
                     </a>
                     <div class="carousel-caption">
 
@@ -118,7 +118,7 @@
 
                   <div class="item infographics__slider-three">
                     <a href="catalog/aquel-zero.html">
-                      <img src="img/aquel-zero-slider.png" alt="Фильтр для воды Aquel Zero">
+                      <img src="img/aquel-zero-slider.png" alt="Фильтр для воды AQUEL Zero">
                     </a>
                     <div class="carousel-caption">
 
@@ -226,7 +226,7 @@
                     <ol>
                       <li>Перейти в <a href="catalog.html" target="_blank">каталог</a>, выбрать продукт и нажать кнопку <b>оформить</b>.</li>
                       <li>Написать нам в <a href="#showchat">онлайн чат</a> и мы по шагам расскажем Вам как совершить покупку.</li>
-                      <li>Заказать <a href="#callbackwidget">обратный звонок</a>, наш консультант подробно расскажет Вам о нашей продукции и подскажет как оформить покупку.</li>
+                      <li>Заказать <a href="#callbackwidget"> обратный звонок</a>, наш консультант расскажет Вам о продукции, поможет с выбором и оформлением.</li>
                     </ol>
                   </div>
                 </div>
@@ -244,9 +244,9 @@
                       <li>Фильтры, требующие монтажа, мы доставляем в 31 город России.</li>
                       <li>Фильтры, не требующие монтажа мы доставляем по всей России.</li>
                       <li>Подробно о доставке конкретного фильтра можно узнать на страницах товара:</li>
-                      <li><a href="catalog/aquel-200.html" target="_blank">Фильтр Aquel 200</a></li>
-                      <li><a href="catalog/aquel-1000.html" target="_blank">Фильтр Aquel 1000</a></li>
-                      <li><a href="catalog/aquel-zero.html" target="_blank">Фильтр Aquel Zero</a></li>
+                      <li><a href="catalog/aquel-200.html" target="_blank">Фильтр AQUEL 200</a></li>
+                      <li><a href="catalog/aquel-1000.html" target="_blank">Фильтр AQUEL 1000</a></li>
+                      <li><a href="catalog/aquel-zero.html" target="_blank">Фильтр AQUEL Zero</a></li>
                     </ul>
                   </div>
                 </div>
@@ -310,12 +310,13 @@
                 <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
                   <div class="panel-body">
                     <ul>
-                      <li>В 2017 году компании <b>Aquel</b> исполняется 17 лет!</li>
-                      <li><b>Aquel</b> работает в Чехии, Словакии, Польше, Германии, ОАЭ, Эстонии, Венгрии, Болгарии и многих других европейских странах.</li>
+                      <li>В 2017 году компании <b>AQUEL</b> исполняется 17 лет!</li>
+                      <li><b>AQUEL</b> работает в Чехии, Словакии, Польше, Германии, ОАЭ, Эстонии, Венгрии, Болгарии и многих других европейских странах.</li>
                       <li>Открыто более 74 региональных офисов по всему миру.</li>
-                      <li>С 2007 года <b>Aquel</b> спонсор Лиги против рака</li>
+                      <li>С 2007 года <b>AQUEL</b> спонсор Лиги против рака</li>
                       <li>С того же года сертификация качества ISO 9001</li>
-                      <li>С 2013 года запуск программы <b>Aquel Levna Energie</b> "Дешевая Энергия".</li>
+                      <li>С 2013 года запуск программы <b>AQUEL Levna Energie</b> "Дешевая Энергия".</li>
+                      <li>Узнайте больше о <a href="brand-aquel.html">Бренде AQUEL</a></li>
                     </ul>
                   </div>
                 </div>
@@ -342,7 +343,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -375,11 +376,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -395,7 +396,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
