--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -88,26 +88,26 @@
             <div class="privacy-police-card">
               <h2 class="privacy-police__title">Использование персональных данных</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="privacy-police__content">DeepAqua.ru использует полученную от Вас информацию, такую как имя и фамилия, адрес, адрес электронной почты, номер телефона, исключительно c той целью, с которой Вы ее предоставляете (для осуществления идентификации покупателя, обеспечения приема платежей, доставки и т.п.). DeepAqua.ru использует полученную информацию исключительно с целью повышения качества предоставляемых Вам услуг. Полученные DeepAqua.ru персональные данные используются исключительно в рамках компании DeepAqua.ru и/или ее коммерческих партнеров с целью удовлетворения Ваших требований. DeepAqua.ru обеспечивает защиту персональных данных, полученных при осуществлении деятельности данного интернет-сайта, в полном соответствии с действующими на территории хостинга интернет-сайта законами.</p>
+              <p class="privacy-police__content">Aquel-Shop.ru использует полученную от Вас информацию, такую как имя и фамилия, адрес, адрес электронной почты, номер телефона, исключительно c той целью, с которой Вы ее предоставляете (для осуществления идентификации покупателя, обеспечения приема платежей, доставки и т.п.). Aquel-Shop.ru использует полученную информацию исключительно с целью повышения качества предоставляемых Вам услуг. Полученные Aquel-Shop.ru персональные данные используются исключительно в рамках компании Aquel-Shop.ru и/или ее коммерческих партнеров с целью удовлетворения Ваших требований. Aquel-Shop.ru обеспечивает защиту персональных данных, полученных при осуществлении деятельности данного интернет-сайта, в полном соответствии с действующими на территории хостинга интернет-сайта законами.</p>
             </div>
 
             <div class="privacy-police-card">
               <h2 class="privacy-police__title">Технологии</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="privacy-police__content">DeepAqua.ru использует интернет-технологии (например, сохранение данных на компьютере посетителя - Cookies, язык сценариев Java Script, протокол безопасности при передаче данных SSL) исключительно в целях улучшения предлагаемых Вам интернет-услуг. В целях повышения эффективности работы данного интернет-сайта DeepAqua.ru осуществляет автоматический сбор некоторого объема сведений (например, используемые при посещении данного интернет-сайта браузер, операционную систему, количество нажатий, средняя продолжительность пребывания посетителя на данном интернет-сайте, пол, возраст, демографические данные и т.п.).</p>
+              <p class="privacy-police__content">Aquel-Shop.ru использует интернет-технологии (например, сохранение данных на компьютере посетителя - Cookies, язык сценариев Java Script, протокол безопасности при передаче данных SSL) исключительно в целях улучшения предлагаемых Вам интернет-услуг. В целях повышения эффективности работы данного интернет-сайта Aquel-Shop.ru осуществляет автоматический сбор некоторого объема сведений (например, используемые при посещении данного интернет-сайта браузер, операционную систему, количество нажатий, средняя продолжительность пребывания посетителя на данном интернет-сайте, пол, возраст, демографические данные и т.п.).</p>
             </div>
 
             <div class="privacy-police-card">
               <h2 class="privacy-police__title">Безопасность</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="privacy-police__content">DeepAqua.ru гарантирует защиту полученных персональных данных от утери, повреждения, не упомянутого в данном документе использования, а также в полном соответствии с действующими на территории хостинга интернет-сайта законами от несанкционированного доступа к личной информации.</p>
+              <p class="privacy-police__content">Aquel-Shop.ru гарантирует защиту полученных персональных данных от утери, повреждения, не упомянутого в данном документе использования, а также в полном соответствии с действующими на территории хостинга интернет-сайта законами от несанкционированного доступа к личной информации.</p>
             </div>
 
             <div class="privacy-police-card">
               <h2 class="privacy-police__title">Вопросы по защите персональных данных</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="privacy-police__content">Если у Вас возникнут вопросы или замечания по обеспечению конфиденциальности персональных данных со стороны DeepAqua.ru, обращайтесь по адресу <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a>. По первому требованию с Вашей стороны переданные Вами персональные данные будут удалены из нашей базы. DeepAqua.ru оставляет за собой право пересматривать порядок и условия обеспечения конфиденциальности персональных данных путем обновления данного текста на интернет-сайте.</p>
-              <p class="privacy-police__content">Интернет-магазин DeepAqua.ru принадлежит и управляется ООО "Айнова", компания не хранит на своих серверах информацию о банковских картах покупателей, данная информация обрабатывается АО "Тинькофф Банк".</p>
+              <p class="privacy-police__content">Если у Вас возникнут вопросы или замечания по обеспечению конфиденциальности персональных данных со стороны Aquel-Shop.ru, обращайтесь по адресу <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a>. По первому требованию с Вашей стороны переданные Вами персональные данные будут удалены из нашей базы. Aquel-Shop.ru оставляет за собой право пересматривать порядок и условия обеспечения конфиденциальности персональных данных путем обновления данного текста на интернет-сайте.</p>
+              <p class="privacy-police__content">Интернет-магазин Aquel-Shop.ru принадлежит и управляется ООО "Айнова", компания не хранит на своих серверах информацию о банковских картах покупателей, данная информация обрабатывается АО "Тинькофф Банк".</p>
             </div>
 
           </div>
@@ -129,7 +129,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -162,11 +162,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -182,7 +182,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
