--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     </script>
 
-    <meta name="description" content="Deep-Aqua это официальный дилер Чешской компании Aquel по продаже фильтров для воды в России. Продажа, доставка и обслуживание в 31 городе России.">
+    <meta name="description" content="Aquel-Shop.ru это официальный дилер Чешской компании AQUEL по продаже фильтров для воды в России. Продажа, доставка и обслуживание в 31 городе России.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -91,7 +91,7 @@
             <div class="about__card">
               <p class="about__title">ООО "Айнова"</p>
               <div class="divider-main divider-main--card"></div>
-              <p class="about__content">Интернет-магазин DeepAqua.ru принадлежит и управляется Обществом с ограниченной ответственностью "Айнова" и является официальным дилером компании "Аквел Ру" на территории Российской Федерации. А главное, мы сами пьем чистую, фильтрованную воду и всем советуем поступать так же и заботиться о себе и близких.</p>
+              <p class="about__content">Интернет-магазин Aquel-Shop.ru принадлежит и управляется Обществом с ограниченной ответственностью "Айнова" и является официальным дилером компании "Аквел Ру" на территории Российской Федерации. А главное, мы сами пьем чистую, фильтрованную воду и всем советуем поступать так же и заботиться о себе и близких.</p>
             </div>
 
             <div class="about__card">
@@ -125,9 +125,9 @@
                 <li>Телефон:</li>
                 <li><a href="tel:+79040459393">+7 904 045 93 93</a></li>
                 <li>Отдел продаж:</li>
-                <li><a href="mailto:sales@deep-aqua.ru">sales@deep-aqua.ru</a></li>
+                <li><a href="mailto:sales@aquel-shop.ru">sales@aquel-shop.ru</a></li>
                 <li>Сотрудничество:</li>
-                <li><a href="mailto:assist@deep-aqua.ru">assist@deep-aqua.ru</a></li>
+                <li><a href="mailto:assist@aquel-shop.ru">assist@aquel-shop.ru</a></li>
               </ul>
             </div>
 
@@ -164,7 +164,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -197,11 +197,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -217,7 +217,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
