--- a/acquired.html
+++ b/acquired.html
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -86,8 +86,8 @@
             <div class="acquired__card">
               <h2 class="acquired__title">Поздравляем с покупкой!</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="acquired__content">Предлагаем Вам познакомиться с основателем и владельцем компании <b>Aquel Bohemia</b> Петром Бенешом, который в своем приветственном видео расскажет, почему так важно вовремя осуществлять сервисное обслуживание с помощью квалифицированных техников, с использованием оригинальных запчастей и картриджей.</p>
-              <p class="acquired__content">Если какие-то вопросы по поводу сервисного обслуживания для Вас останутся не до конца понятны, пожалуйста, напишите нам прямо сейчас, мы с удовольствием ответим.</p>
+              <p class="acquired__content">Предлагаем Вам познакомиться с основателем и владельцем компании <b>AQUEL Bohemia</b> Петром Бенешом, который в своем приветственном видео расскажет, почему так важно вовремя осуществлять сервисное обслуживание с помощью квалифицированных техников, с использованием оригинальных запчастей и картриджей.</p>
+              <p class="acquired__content">Если какие-то вопросы по поводу сервисного обслуживания для Вас останутся не до конца понятны, пожалуйста, <a href="#showchat"">напишите</a> нам прямо сейчас, мы с удовольствием ответим.</p>
             </div>
 
             <div class="acquired__card acquired__card--video">
@@ -97,12 +97,12 @@
             </div>
 
             <div class="acquired__card">
-              <h2 class="acquired__title"><strong>Важно: поддельный сервис!</strong></h2>
+              <h2 class="acquired__title"><b>Важно: поддельный сервис!</b></h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="acquired__content">Уважаемые <b>владельцы фильтров Aquel</b>, обращаем Ваше внимание на <strong>беспрецедентный случай мошенничества</strong> со стороны бывших менеджеров российского подразделения Aquel, который привел к массовому ухудшению качества работы фильтрующего оборудования.</p>
+              <p class="acquired__content">Уважаемые <b>владельцы фильтров AQUEL</b>, обращаем Ваше внимание на <b>беспрецедентный случай мошенничества</b> со стороны бывших менеджеров российского подразделения AQUEL, который привел к массовому ухудшению качества работы фильтрующего оборудования.</p>
               <p class="acquired__content">Официальное письмо Петра Бенеша:</p>
-              <p class="acquired__content">"В ходе внутреннего аудита компании ООО "AQUEL Plus" ИНН 3904606979 мной были обнаружены факты ненадлежащего исполнения управленческих функций со стороны некоторых наших бывших сотрудников в рамках гарантии на фильтрационные устройства Aquel, сервисных замен, порядка выполнения ремонта и решения претензий."</p>
-              <p class="acquired__content"><strong>Будьте внимательны при осуществлении платежей за сервисное обслуживание!</strong></p>
+              <p class="acquired__content">"В ходе внутреннего аудита компании ООО "AQUEL Plus" ИНН 3904606979 мной были обнаружены факты ненадлежащего исполнения управленческих функций со стороны некоторых наших бывших сотрудников в рамках гарантии на фильтрационные устройства AQUEL, сервисных замен, порядка выполнения ремонта и решения претензий."</p>
+              <p class="acquired__content"><b>Будьте внимательны при осуществлении платежей за сервисное обслуживание!</b></p>
               <p class="acquired__content">Единственая официальная компания, уполномоченная осуществлять сервисное обслуживание имеет следующее название и реквизиты:</p>
 
               <ul class="acquired__list">
@@ -148,7 +148,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -181,11 +181,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -201,7 +201,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
