--- a/catalog/aqua-air.html
+++ b/catalog/aqua-air.html
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="../index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="../index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -156,7 +156,7 @@
 
               <div class="card">
                 <a href="aquel-zero.html">
-                  <h3 class="card__title">Aquel Zero</h3>
+                  <h3 class="card__title">AQUEL Zero</h3>
                   <p class="card__content">Мобилен и универсален</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-zero-1.png" alt="">
@@ -166,7 +166,7 @@
 
               <div class="card">
                 <a href="aquel-1000.html">
-                  <h3 class="card__title">Aquel 1000</h3>
+                  <h3 class="card__title">AQUEL 1000</h3>
                   <p class="card__content">Идеально для дома и офиса</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-1000.png" alt="">
@@ -176,7 +176,7 @@
 
               <div class="card">
                 <a href="aquel-200.html">
-                  <h3 class="card__title">Aquel 200</h3>
+                  <h3 class="card__title">AQUEL 200</h3>
                   <p class="card__content">Лучший выбор для дома</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-200.png" alt="">
@@ -187,7 +187,7 @@
           </div>
         </div>
 
-        <div class="advice">
+        <div class="advice advice--single-product">
 
           <h2 class="advice__title">Получите консультацию</h2>
           <div class="container-article">
@@ -219,7 +219,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -252,11 +252,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="../brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="../brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="../contract-offer.html">Договор оферта</a></li>
               <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="../acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="../acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -272,7 +272,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
