--- a/catalog/aquel-zero.html
+++ b/catalog/aquel-zero.html
@@ -34,12 +34,12 @@
             }
         </script>
 
-    <meta name="description" content="Фильтр Aquel Zero это самая компактная модель в линейке продукции Aquel, способная при этом максимально очищать воду, работать без необходимости подключения к водопроводу. Может быть установлена в любом удобном месте. За 10 минут очищает 4 литра воды. Бесплатно доставляется во все города России.">
+    <meta name="description" content="Фильтр AQUEL Zero это самая компактная модель в линейке продукции AQUEL, способная при этом максимально очищать воду, работать без необходимости подключения к водопроводу. Может быть установлена в любом удобном месте. За 10 минут очищает 4 литра воды. Бесплатно доставляется во все города России.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="../css/style.css">
-    <title>Фильтр для воды Aquel Zero</title>
+    <title>Фильтр для воды AQUEL Zero</title>
   </head>
 
   <body>
@@ -58,7 +58,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="../index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="../index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -82,7 +82,7 @@
 
             <div class="single-product__content-block">
               <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">Aquel Zero</h2>
+              <h2 class="single-product__sub-title">AQUEL Zero</h2>
               <p class="single-product__price">44 980 ₽</p>
               <p class="single-product__content">Идеально для любого места</p>
               <p class="single-product__content">Бесплатная доставка, 2-10 дней</p>
@@ -117,7 +117,8 @@
                       document.TinkoffPayForm.payPhone.value)"
                       value="ОПЛАТИТЬ">
                   </form>
-
+                  <img class="well__secure-img" width="90" src="../img/visa-mastercard-logo-small.png" alt="Защищенные платежи">
+                  <span class="well__secure-pay">*Secure Payment</span>
                 </div>
               </div>
             </div>
@@ -136,7 +137,7 @@
             </ul>
 
             <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>Aquel Zero</strong> это революционно новая технология компактной фильтрации без необходимости подключения к водопроводу. Идеально подходит для офиса, семьи и индивидуального использования. Модель проста в обслуживании - одна панель управления всеми функциями, световая индикация состояния системы. Простая замена фильтрующих картриджей - "повернул, вынул, подключил новый",  справится даже подросток. Aquel Zero может быть установлен в любом удобном месте, занимает мало места. Для использования достаточно подключить электропитание и залить 4 литра любой воды и через 10 минут Вы получите совершенно чистую, минерализованную воду, объемом 2 литра!</p></div>
+              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>AQUEL Zero</strong> это революционно новая технология компактной фильтрации без необходимости подключения к водопроводу. Идеально подходит для офиса, семьи и индивидуального использования. Модель проста в обслуживании - одна панель управления всеми функциями, световая индикация состояния системы. Простая замена фильтрующих картриджей - "повернул, вынул, подключил новый",  справится даже подросток. AQUEL Zero может быть установлен в любом удобном месте, занимает мало места. Для использования достаточно подключить электропитание и залить 4 литра любой воды и через 10 минут Вы получите совершенно чистую, минерализованную воду, объемом 2 литра!</p></div>
               <div role="tabpanel" class="tab-pane fade" id="feature">
                 <p>
                   <ul>
@@ -173,7 +174,7 @@
               <div role="tabpanel" class="tab-pane fade" id="delivery">
                 <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
                 </p>
-                <p>Фильтр <strong>Aquel Zero</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
+                <p>Фильтр <strong>AQUEL Zero</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
               </div>
 
             </div>
@@ -198,7 +199,7 @@
 
               <div class="card">
                 <a href="aquel-1000.html">
-                  <h3 class="card__title">Aquel 1000</h3>
+                  <h3 class="card__title">AQUEL 1000</h3>
                   <p class="card__content">Идеально для дома и офиса</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-1000.png" alt="">
@@ -208,7 +209,7 @@
 
               <div class="card">
                 <a href="aquel-200.html">
-                  <h3 class="card__title">Aquel 200</h3>
+                  <h3 class="card__title">AQUEL 200</h3>
                   <p class="card__content">Лучший выбор для дома</p>
                   <div class="card__img">
                     <img src="../img/small-aquel-200.png" alt="">
@@ -219,7 +220,7 @@
           </div>
         </div>
 
-        <div class="advice">
+        <div class="advice advice--single-product">
 
           <h2 class="advice__title">Получите консультацию</h2>
           <div class="container-article">
@@ -251,7 +252,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -284,11 +285,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="../brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="../brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="../contract-offer.html">Договор оферта</a></li>
               <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="../acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="../acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -304,7 +305,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
