--- a/contract-offer.html
+++ b/contract-offer.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Договор оферта магазина Deep-Aqua по продаже фильтров для воды</title>
+    <title>Договор оферта интернет-магазина Aquel-Shop.ru по продаже фильтров для воды</title>
   </head>
 
   <body>
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -89,12 +89,12 @@
               <h2 class="contract-offer__title">Договор-оферта интернет-магазина:</h2>
               <div class="divider-main divider-main--card"></div>
 
-              <p class="contract-offer__content">ООО "Айнова", в лице интернет-магазина https://deep-aqua.ru (далее ПРОДАВЕЦ), публикует настоящий договор, являющийся публичным договором-офертой в адрес как физических, так и юридических лиц (далее ПОКУПАТЕЛЬ) о нижеследующем:</p>
+              <p class="contract-offer__content">ООО "Айнова", в лице интернет-магазина https://aquel-shop.ru (далее ПРОДАВЕЦ), публикует настоящий договор, являющийся публичным договором-офертой в адрес как физических, так и юридических лиц (далее ПОКУПАТЕЛЬ) о нижеследующем:</p>
 
               <h3 class="contract-offer__sub-title">1. Предмет договора-оферты.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
-                <li>1.1 ПРОДАВЕЦ обязуется передать в собственность ПОКУПАТЕЛЮ, а ПОКУПАТЕЛЬ обязуется оплатить и принять заказанные в интернет-магазине https://deep-aqua.ru товары (далее ТОВАР).</li>
+                <li>1.1 ПРОДАВЕЦ обязуется передать в собственность ПОКУПАТЕЛЮ, а ПОКУПАТЕЛЬ обязуется оплатить и принять заказанные в интернет-магазине https://aquel-shop.ru товары (далее ТОВАР).</li>
               </ul>
 
               <h3 class="contract-offer__sub-title">2. Момент заключения договора.</h3>
@@ -102,7 +102,7 @@
               <ul class="contract-offer__list">
                 <li>2.1. Текст данного Договора является публичной офертой (в соответствии со статьей 435 и частью 2 статьи 437 Гражданского кодекса РФ).</li>
                 <li>2.2. Факт оформления ЗАКАЗА ТОВАРА у ПРОДАВЦА как самостоятельно, так и через оператора, является безоговорочным принятием данного Договора, и ПОКУПАТЕЛЬ рассматривается как лицо, вступившее с ООО «Айнова» в договорные отношения.</li>
-                <li>2.3. Оформление ЗАКАЗА ТОВАРА и расчета осуществляется путем заказа ПОКУПАТЕЛЕМ в интернет-магазине https://deep-aqua.ru.</li>
+                <li>2.3. Оформление ЗАКАЗА ТОВАРА и расчета осуществляется путем заказа ПОКУПАТЕЛЕМ в интернет-магазине https://aquel-shop.ru.</li>
               </ul>
 
               <h3 class="contract-offer__sub-title">3. Характеристики ТОВАРА.</h3>
@@ -138,7 +138,7 @@
               <h3 class="contract-offer__sub-title">7. Гарантии на товар.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
-                <li>7.1. На всю продукцию, продающуюся в Интернет-магазине https://deep-aqua.ru, имеются все необходимые сертификаты качества и санитарно-гигиенические заключения.</li>
+                <li>7.1. На всю продукцию, продающуюся в Интернет-магазине https://aquel-shop.ru, имеются все необходимые сертификаты качества и санитарно-гигиенические заключения.</li>
                 <li>7.2. Гарантийный срок эксплуатации на ТОВАР устанавливает производитель. Срок гарантии указывается в гарантийном талоне.</li>
               </ul>
 
@@ -148,13 +148,13 @@
                 <li>8.1. ПРОДАВЕЦ обязуется:
                   <ul class="contract-offer__list">
                     <li>8.1.1. Не разглашать любую частную информацию ПОКУПАТЕЛЯ и не предоставлять доступ к этой информации третьим лицам, за исключением случаев, предусмотренных Российским законодательством.</li>
-                    <li>8.1.2. Предоставить ПОКУПАТЕЛЮ возможность получения бесплатных телефонных консультаций по телефонам, указанным на сайте магазина (https://deep-aqua.ru). Объем консультаций ограничивается конкретными вопросами, связанными с выполнениями ЗАКАЗА.</li>
+                    <li>8.1.2. Предоставить ПОКУПАТЕЛЮ возможность получения бесплатных телефонных консультаций по телефонам, указанным на сайте магазина (https://aquel-shop.ru). Объем консультаций ограничивается конкретными вопросами, связанными с выполнениями ЗАКАЗА.</li>
                     <li>8.1.3. ПРОДАВЕЦ оставляет за собой право изменять настоящий ДОГОВОР в одностороннем порядке до момента его заключения.</li>
                   </ul>
                 </li>
                 <li>8.2. ПОКУПАТЕЛЬ обязуется:
                   <ul class="contract-offer__list">
-                    <li>8.2.1. До момента заключения ДОГОВОРА ознакомиться с содержанием договора-оферты, условиями оплаты и доставки на сайте магазина (https://deep-aqua.ru).</li>
+                    <li>8.2.1. До момента заключения ДОГОВОРА ознакомиться с содержанием договора-оферты, условиями оплаты и доставки на сайте магазина (https://aquel-shop.ru).</li>
                     <li>8.2.2. Предоставлять достоверную информацию о себе (ФИО, контактные телефоны, адрес электронной почты) и реквизиты для доставки ТОВАРА.</li>
                     <li>8.2.3. Принять и оплатить ТОВАР в указанные в настоящем ДОГОВОРЕ сроки.</li>
                   </ul>
@@ -175,7 +175,7 @@
               <h3 class="contract-offer__sub-title">10. Возврат и обмен товара.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
-                <li>10.1. Требование ПОКУПАТЕЛЯ об обмене либо о возврате ТОВАРА подлежит удовлетворению, если ТОВАР не был в употреблении, сохранены его потребительские свойства, сохранена и не нарушена упаковка, сохранены документы, подтверждающие факт покупки этого ТОВАРА в интернет-магазине https://deep-aqua.ru.</li>
+                <li>10.1. Требование ПОКУПАТЕЛЯ об обмене либо о возврате ТОВАРА подлежит удовлетворению, если ТОВАР не был в употреблении, сохранены его потребительские свойства, сохранена и не нарушена упаковка, сохранены документы, подтверждающие факт покупки этого ТОВАРА в интернет-магазине https://aquel-shop.ru.</li>
                 <li>10.2. Срок такого требования составляет 7 (семи) дней с момента передачи ТОВАРА ПОКУПАТЕЛЮ.</li>
                 <li>10.3. ПОКУПАТЕЛЬ компенсирует ПРОДАВЦУ необходимые транспортные расходы, понесенные в связи с организацией обмена или возврата ТОВАРА.</li>
               </ul>
@@ -225,7 +225,7 @@
 
           <div class="footer__social">
             <h4 class="footer__social-title">Нужна помощь?</h4>
-            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Напишите: <a href="mailto:support@aquel-shop.ru">support@aquel-shop.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79040459393">+7 904 045 93 93</a></p>
             <div class="footer__social-bar">
               <!-- <a href="#" class="social__icon">
@@ -258,11 +258,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -278,7 +278,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Deep-Aqua Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
