--- a/warranty-and-service.html
+++ b/warranty-and-service.html
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">Aquel</a>
+              <a class="navbar-brand animation-pulse" href="index.html">AQUEL</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -168,11 +168,11 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="brand-aquel.html">Бренд АКВЕЛ</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="acquired.html">Для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -188,7 +188,7 @@
 
         </div>
 
-        <div class="footer__copyright"><span>© 2017 Aquel Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
+        <div class="footer__copyright"><span>© 2017 Aquel-Shop.ru Сделано с <svg width="12" height="12" viewBox="0 0 24 24"><path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"/></svg> в "Айнова"</span>
         </div>
 
       </section><!-- /.footer -->
